@@ -1,21 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX server.conf 337 SHA256 5520d4d1a0be0fa416e1d4b15f69980cba75c082bf7ae94cefa695af6eb56771 SHA512 870acb2cc74b3a48fece9502cc09dcb8a63db8671721c642f1648a305b08b92cccdd883b08e33e28165bf52fa59b5b745f18401ca115deef8fd9f3b190bfc750 WHIRLPOOL e1bd3aedf729cc5d006cfa43aa41e48e9cf85937f03683352ceab5fcb15913b195c4cf7283b467b7e635cd4df89d72afb179d5e5a004cfeaae0c3be7479916e3
 AUX systemd/teamspeak3.conf 133 SHA256 a3851323891a304e6fc5c53740c0e239f167a7c9251cfc8c7e8a4e1b1ac8a1d8 SHA512 49dab025ab37bb29e14a14fb070568c5710fe257a35fe6b887aa404847fc828e9ffecad7c5d10e987128934c433c3b464b8da0e4891ba3b48868b73abb4b9a4c WHIRLPOOL b7980faa9d5c0b83fa1d72eeb14745c050b01bec70a8cd0974157ce02eef06faafb4f7b35a0c4cff496b102817a9d8245237808557472f9452108f46ac9362ab
 AUX systemd/teamspeak3.service 500 SHA256 d211157fd94480c2d4c21e797ba01e51d0ec1563f1a34cbcda503a7ef110ea8c SHA512 332486a1b456fecade65004384f032291ee3d6e55c5b347b7dc6e7a39f6a633e3a381922295a8e431810d425c77b645df42d916d51bc4a1118aff056b606f0a4 WHIRLPOOL 4314ea4a1ecc33164c10017a8ee4328fea22a16ef5a600ea84cd8ac54b9eec2bdd835e85a24c01552a46d78ff869f03c7ef0970d32eafa31a72000f07b780b6a
 AUX teamspeak3-server.rc 1090 SHA256 11fae7c9792972c6964e1923483e68ba88fa8b4165459ba6a03336fc4d60e862 SHA512 318389d48c943d3ef84384a3690617493c84692919dc2f15d7b28f83cd3c575b69bbf17f9f87c84a4ed3b3f2446fd406c13b6bd5be76aac7387597cacb4fa83c WHIRLPOOL 47d903f88aa2a52f5ebcec0da8b34ecd40e72fee1013615106ca31a88c663f8f909f6d554b1f9237f6fac2234c001adcbea197d64ec08434f86770e2d3a37f7e
 AUX ts3server 262 SHA256 1565e470d1d17d0161ba78c14726f5fc0628fa155a0153349c869fd8011cbe67 SHA512 f922482e754708c551868e05511685f609fb32b7bfbfd8d545b991b5fb24eec20ee31ca5721ef62636228902faa5b43d62a2742637e08683da17694c46cd01fe WHIRLPOOL 197193a3988d132f0ef8423b682a585c4ba22e46ca4ff87e1203b7d38b22e3b6bf3416990441172f2d91c0fde4eddef9aeb34c00a178f1ea02e1583d8d992ce3
-DIST teamspeak3-server_linux-amd64-3.0.0-beta30.tar.gz 3671039 SHA256 244c1168a231c0739d5d53d0b065bb0da4dad13960b28bf49f42b69e40240fb1
-DIST teamspeak3-server_linux-amd64-3.0.0-rc1.tar.gz 3891707 SHA256 75c107b5b51a724b554f7445793e200e4748dd9f3708affef22cdd2ea8c5e218
-DIST teamspeak3-server_linux-amd64-3.0.5.tar.gz 4048053 SHA256 61f158d445262dc682676b17c86c36db2008b9e472401bd6409a6f8dde3d595a SHA512 ea5c5cb947bae1afbdb3fa67e71910825beb05818460298bdbc8232ece594abd3282ceba3b11cfe0a79e431e0bc66335cbe1e41d8f3cc1afa6750ae3ed2d508b WHIRLPOOL 41c6118c7a0afba3880333f3d93593a0b65b565356650634bc7c529cccf0f18d0d160abdb6b728e05f7a78e40a7db436dd299ed551b51a15ef7a9115f00a9a62
 DIST teamspeak3-server_linux-amd64-3.0.6.1.tar.gz 4131518 SHA256 5d222d1f6b28db856788e0004a1a2143372c82fecbd0651e8a575cee8742ef3c SHA512 e5700fea5bf4df2134449cf3a57a823feb4bf72e052bec242fe4d180563a44cf48acd3d46f3ac2ec1a9c300ab903ff132cb16e06501cbac4650993240656414b WHIRLPOOL 4ba2a6f4561365c1441c7bec861b057e8d66d5ea9f08f05e472c2ed70ceedec5898b149e9cb208d0cdea7ccccde97acda0de9e412c5e86cc8a25ff3a25b12ee2
-DIST teamspeak3-server_linux-x86-3.0.0-beta30.tar.gz 3980738 SHA256 a0721f99bf4158615ab9346fe65f5e9dba61fb93be1333195d9e0c8bd64eef2a
-DIST teamspeak3-server_linux-x86-3.0.0-rc1.tar.gz 4198820 SHA256 54dda1a42f1909f031fd875777854b3bdeca88a17ae55f88a6235d794021327b
-DIST teamspeak3-server_linux-x86-3.0.5.tar.gz 4359085 SHA256 e5fcb986412921828d7338f5faf3910bdd3e9c4bbd6a0a9d93d5637e77ad0eff
 DIST teamspeak3-server_linux-x86-3.0.6.1.tar.gz 4436951 SHA256 ea0399bfce623b09e15dca4fc970528ae7b4cee27027ff2ab03a1563da562f0c SHA512 5e022bcb8b3c0b8c728c2ea85421908c86f9e41ea87c172a246fd749b04182467cfdaba8d53413b76c6dbbf97d598564e533245f2530f6375c5cd35465c2f850 WHIRLPOOL a4fa70b534bd3370cda50de7f462126db2d0a34bbe4fa5fcae3c226d277f03bc30d8af09d3909c79f005decc68b5f8c15517fc9e7a485d8c9807ca83082402d1
-EBUILD teamspeak-server-bin-3.0.0_beta30.ebuild 1475 SHA256 3cf2fe2f0f0e653ef52ecec3f87641b71281cfd53db84db5a8deaab4b3860e36 SHA512 6740cb47c6cdb5dedaf90c6f74d75487d71e07893cda64f450f0d972c1534bd821b682c6b7ad06917dc152b60926253663f8f6da794b68ee2a3d86a003c20145 WHIRLPOOL a8e12d8486e16cecd9e0bc94b491409e1397ceea2e952bb14089de86db2443bc0bce3379b13dc2184a9c20cd61e6cd76eae32c4f15930d884444c32a0e427caa
-EBUILD teamspeak-server-bin-3.0.0_rc1.ebuild 1462 SHA256 283d5f0abfeb6bd089fb3b1e94a26bf633e2f365e82db661a5fa17e9c83f4efa SHA512 04e39cba6f5a9a3fe01237c31ce873138200b1b4c2e9922876958427e3de617cc61188575390e654a287160f03e08599221e966fc0c5ad1773470c6a3927f783 WHIRLPOOL c01e7ec98620d5698f8b74e23337a7a482af7dff82db344cd54a33f214a8268b52e43f02d158928ccbddf6e07ca94891cb0ebc70865a1c3c35053a4a895a0994
-EBUILD teamspeak-server-bin-3.0.5-r1.ebuild 1554 SHA256 1ab33a9555dffb377c0ae7ff2911284f933717721a781bb3eb044fc6996c8b3b SHA512 ae49f04a5c8a02e382ff125e2766c053a2cba8f57fbad6fc786d28a692e1b1b738ce14eeb45d8e3666c23a7652f4886e2c202aeaf8bf6e9f0188f154be977a0e WHIRLPOOL fcf5f96f0e95b2a8329c63e94c4bd7a5a821847b0793c9037cbdb054213356cb1b241efa3e914c68800269523b460d772e1f356b77306d15f27a25a5955d3894
-EBUILD teamspeak-server-bin-3.0.5-r2.ebuild 1602 SHA256 d28acb12122b825838e14a23f82bc5a9c08fc2db8b5841494b83007d863f2c4f SHA512 6fc2d97a5dbbc607d729399c0ad401ed1f99f744ef30bdd0de2618b7d8e8fd8276af721baa9aea185ac214b5acdd02312764927da7d0da9d955972cf63be69db WHIRLPOOL 9bccc358940b101951a29124331146a731c7bff479abd1d3620ae3d14f29fea4bef092faa912618f73a5a75198fb8302a3ad48e7d86e2170dba1462e4bbdafc8
-EBUILD teamspeak-server-bin-3.0.5.ebuild 1426 SHA256 f525e5505ec505e105cfb2ca9d5ea30ce9b5765f6072f12120b85afa9a569778 SHA512 e0ce16e65a2a937e67d8ea7a0460772491d7f1f704dada2ca19d8c662f48ae9892b3dee3de23d284304a1217239523426f514c96cfe200b885d4c63b46c92071 WHIRLPOOL 973f34f72a01ade2d7e698da88d6d582b75c718eda56e49f7df49a456cc81df42cc544387016635c8617ba697ece05441abfadcf7d1651f06dca3231597c77db
 EBUILD teamspeak-server-bin-3.0.6.1.ebuild 1600 SHA256 420d29407ccfcaac6f0df7cc9dfdd1c61bdb54dc96bbafb2a55f99d0d5ab9bd5 SHA512 37010109c9836666a1aeb7b95ed9ccebf6e7fb8b0a8a32428cb9b8ec350ff5d759d41d57e5d4677ffa295096c457116979394bc8548a96476a2ea8448283dc34 WHIRLPOOL 3d0e040b071179ae72aeea21f9ce68136c804d2998974b2b0ce161b5ac303f1405da72d836f24e767111bdff6f439a40efd35d51c1c7f5cec7ef8ba35960e608
-MISC ChangeLog 5351 SHA256 7d9d90a2054bf847fbd29fa368195f902699df4277d61a36ae9a9c3803f44d0c SHA512 c0c70731c0e83c5cb83dae481adac77e2970c9f1fe5ebf636c45c63942f3f643f262bd8722b82b6ea8c52b92f2004319042a8b1ccc24666f9250af3555d2db3c WHIRLPOOL c97e3cbd5d71dd144ed8a1ce99128ec5dbdc8ac8f9805dbf5175d2a21c99fa16dfc7faa5edba8bb8352b3f1bbc4375249e274f9311dc484bf40ced65911f7d01
-MISC metadata.xml 287 SHA256 8772fbc91e907dd7a8325b1b34c45eb65301bd1686df49daa1b842d6cde8c990 SHA512 62f5a56225b3ac8465456c0063e4637954cb851fbe832536e36047686266c505387d1585b77ba5be73c626ab621eb77c7aa3855cd5d87bad326fc2f151c8146c WHIRLPOOL 6d351def0f521414361d4e8e6a10bba5e88c445de37a05cc6ff2d35d27190b5439268833de7088eb0a491fa999a21f220605114781fc54a23896175f53d99623
+MISC ChangeLog 5743 SHA256 37df03b9444aa0fa91907c3bdef9c7dd900e1da31b8a05cf8e920dbbd4dc60ac SHA512 9eb21253b21b3b5ff82bfd4480109995cf8755b364e9205c3cbada6b9ce9fe3bab5becac578f93d6e4f7263811ac0bcca244a6e36109eea161aa1c2a1f69f9ee WHIRLPOOL e9097c861292a52a47b75452493310365d9187b197bcac8d7d2aa06f357035cf58011fa5e954905c8b0dac45db55a0519c7e844a023fa674b5d64746cc8190f4
+MISC metadata.xml 253 SHA256 212e1bb1a8d4a78887b62ab09bdee22c4fef4429ff907a1cf6650b13f2f15638 SHA512 c79edda03b0c30c9a305736552ceee8cd6a59bffc10357c2885dbb4460cff249b9140326023d0d50c81b94a02b50ab96042bc0d2b24d569f9d4e6f00d9701a87 WHIRLPOOL 83a41dcc4eb5b4ab20001053bf3f9f4e06a05111b6c70ee78af712d922c79a4d30b91ae4f53ea3ef84ca573bec9d21034509c964123fe698e715fd923291c63e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCotMoACgkQCaWpQKGI+9SiUQCggFoGl2QPLGw7e5325/VTKSa0
+2nYAn3KAQdW4LBARaeebBRBAEpltootE
+=68qD
+-----END PGP SIGNATURE-----
