@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>trapni@gentoo.org</email>
-	</maintainer>
-	<longdescription>TeamSpeak Server (Voice Communication Software)</longdescription>
+<herd>proxy-maintainers</herd>
+<longdescription>TeamSpeak Server (Voice Communication Software)</longdescription>
 </pkgmetadata>
